[tool.poetry]
name = "mozart-mistral"
version = "0.1.0"
description = "Call modal API"
authors = ["CardiGPT <150696547+CardiGPT@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.343"
pydantic = "^2.5.2"
abc123abc = "^0.0.0"
jupyter = "^1.0.0"
python-dotenv = "*"
openai = "^1.3.4"
huggingface_hub = "*"
passlib = "*"
datasets = "*"
unstructured = "*"
pandas = "*"
duckduckgo-search = "*"
nltk = "*"
python-iso639 = "*"
requests = "*"
langdetect = "*"
python-magic = "*"
dataclasses-json = "*"
tabulate = "*"
beautifulsoup4 = "*"
chardet = "*"
emoji = "*"
numpy = "*"
lxml = "*"
filetype = "*"
jsonpatch = "<2.0,>=1.33"
langsmith = "<0.1.0,>=0.0.40"
anyio = "<4.0"
aiohttp = "<4.0.0,>=3.8.3"
fsspec = "*"
tiktoken = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
